<resources>
    <string name="app_name">UnitConverter</string>
    <string name="enter_value">Enter here</string>
    <string name="length">Length</string>
    <string name="temperature">Temperature</string>
    <string name="weight">Weight</string>
    <string name="TextView">TextView</string>
    <string-array name="units">
        <item>Metre</item>
        <item>Celsius</item>
        <item>Kilograms</item>
    </string-array>
</resources>
